# structx

./: .auto-changelog  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  generate-changelog.yml  publish.yml
api/configuration/: index.html
api/extractor/: index.html
api/models/: index.html
api/utilities/: index.html
contributing/: index.html
docs/: ROADMAP.md  __init__.py  changelog.md  contributing.md  examples.md  getting-started.md  index.md
docs/api/: configuration.md  exceptions.md  extractor.md  inputs.md  models.md  token-tracking.md  utilities.md
docs/examples/: document-processing.md  incident-analysis.md  metrics-extraction.md
docs/guides/: async-operations.md  basic-extraction.md  custom-models.md  model-refinement.md  multiple-queries.md  retry-mechanism.md  token-tracking.md  unstructured-text.md  working-with-results.md
docs/reference/: configuration-options.md  error-handling.md  supported-formats.md
examples/: README.md  example.py
examples/document-processing/: index.html
examples/incident-analysis/: index.html
examples/metrics-extraction/: index.html
getting-started/: index.html
guides/async-operations/: index.html
guides/basic-extraction/: index.html
guides/custom-models/: index.html
guides/multiple-queries/: index.html
guides/unstructured-text/: index.html
overrides/: main.html
overrides/assets/stylesheets/: extra.css
reference/configuration-options/: index.html
reference/error-handling/: index.html
reference/supported-formats/: index.html
scripts/: generate_changelog.py  generate_examples.py
search/: search_index.json
structx/: __init__.py  schema.py
structx/core/: config.py  exceptions.py  input.py  models.py  type_system.py
structx/extraction/: __init__.py  extractor.py  generator.py  result_manager.py
structx/extraction/core/: __init__.py  llm_core.py
structx/extraction/engines/: extraction_engine.py
structx/extraction/processors/: __init__.py  batch_processor.py  content_analyzer.py  data_content.py  data_processor.py  input_processor.py  model_operations.py
structx/utils/: constants.py  file_reader.py  helpers.py  prompts.py  types.py  usage.py
tests/: conftest.py  test_config_and_model_utils.py  test_content_analyzer.py  test_data_processor.py  test_document_conversion_integration.py  test_extraction_engine.py  test_extractor_async.py  test_extractor_flow.py  test_file_reader.py  test_input_and_batch_processors.py  test_live_llm.py  test_llm_configuration.py  test_result_manager_and_helpers.py  test_schema_contract.py  test_type_system_and_planning.py  test_usage.py
