[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structx"
version = "0.4.11"
description = "Structured data extraction from text using LLMs and dynamic model generation"
authors = [{ name = "blacksuan19", email = "py@aolabs.dev" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "docling",
    "instructor",
    "litellm",
    "loguru",
    "omegaconf",
    "openpyxl>=3.1.5",
    "pandas",
    "pydantic",
    "tabulate>=0.9.0", # required for pandas .to_markdown()
    "tenacity",
    "tqdm",
    "weasyprint",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "wheel"]

# Backward-compatible aliases. Document processing is part of the core install.
pdf = []
text = []
docx = []
documents = []
docs = []
docling = []
advanced = []

# Documentation site tooling. This is separate from the legacy [docs] document
# processing extra above.
mkdocs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material[imaging]",
    "mkdocs-mermaid2-plugin",
]

[tool.bumpver]
current_version = "0.4.11"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"structx/__init__.py" = ['__version__ = "{version}"']
"README.md" = ["PyPi-{version}"]

[tool.setuptools.packages.find]
# Only package the library code under structx; exclude MkDocs overrides and others
include = ["structx*"]
