[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structx"
version = "0.4.11"
description = "Structured data extraction from text using LLMs and dynamic model generation"
authors = [{ name = "blacksuan19", email = "py@aolabs.dev" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "instructor",
    "litellm",
    "loguru",
    "omegaconf",
    "openpyxl>=3.1.5",
    "pandas",
    "pydantic",
    "tabulate>=0.9.0", # required for pandas .to_markdown()
    "tenacity",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "pytest", "wheel"]

# Optional document processing support. Kept out of the base install because
# Docling's local model pipeline requires PyTorch.
# The format-pdf extra is still needed because DocumentConverter imports its
# PDF backend dependencies even when existing PDFs are passed through directly.
docs = [
    "docling-slim[convert-core,format-docx,format-html,format-latex,format-markdown,format-opendocument,format-pdf,format-pptx,format-web,models-local]",
    "torch",
    "torchvision",
    "weasyprint",
]

# Documentation site tooling.
mkdocs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material[imaging]",
    "mkdocs-mermaid2-plugin",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.bumpver]
current_version = "0.4.11"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"structx/__init__.py" = ['__version__ = "{version}"']
"README.md" = ["PyPi-{version}"]

[tool.setuptools.packages.find]
# Only package the library code under structx; exclude MkDocs overrides and others
include = ["structx*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:This field is deprecated.*:DeprecationWarning:docling\\.pipeline\\.standard_pdf_pipeline",
    "ignore:torch\\.ao\\.quantization is deprecated.*:DeprecationWarning:torch\\.ao\\.quantization\\.quantize",
    "ignore:torch\\.quantize_per_tensor.*:UserWarning:torch\\.ao\\.nn\\.quantized\\.dynamic\\.modules\\.rnn",
]
pythonpath = ["."]
testpaths = ["tests"]
