[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structx"
version = "0.6.1"
description = "Structured data extraction from text using LLMs and dynamic model generation"
authors = [{ name = "blacksuan19", email = "py@aolabs.dev" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "instructor>=1.15.4",
    "litellm>=1.91.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pydantic-settings[yaml]>=2.14.2",
    "tabulate>=0.9.0", # required for pandas .to_markdown()
    "tenacity>=9.1.2",
    "tqdm>=4.68.4",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "bumpver>=2024.1130",
    "pip-tools>=7.4.1",
    "pytest>=9.1.1",
    "wheel>=0.45.1",
]

# Optional document processing support. Kept out of the base install because
# Docling's local model pipeline requires PyTorch.
# The format-pdf extra is still needed because DocumentConverter imports its
# PDF backend dependencies even when existing PDFs are passed through directly.
docs = [
    "docling-slim[convert-core,format-docx,format-html,format-latex,format-markdown,format-opendocument,format-pdf,format-pptx,format-web,models-local]>=2.111.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "weasyprint>=69.0",
]

# Documentation site tooling.
mkdocs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material[imaging]>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.bumpver]
current_version = "0.6.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore(release): bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"structx/__init__.py" = ['__version__ = "{version}"']
"README.md" = ["PyPi-{version}"]

[tool.setuptools.packages.find]
# Only package the library code under structx; exclude MkDocs overrides and others
include = ["structx*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning:litellm\\._service_logger",
    "ignore:This field is deprecated.*:DeprecationWarning:docling\\.pipeline\\.standard_pdf_pipeline",
    "ignore:torch\\.ao\\.quantization is deprecated.*:DeprecationWarning:torch\\.ao\\.quantization\\.quantize",
    "ignore:torch\\.quantize_per_tensor.*:UserWarning:torch\\.ao\\.nn\\.quantized\\.dynamic\\.modules\\.rnn",
]
pythonpath = ["."]
testpaths = ["tests"]
